@@ -1,3 +1,11 @@
+2008-06-14  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
+
+	* src/libYARP_OS/src/ShmemOutputStream.cpp: fix "sizeof" syntax
+	problem (exposed on mingw)
+
+	* src/libYARP_OS/src/ShmemInputStream.cpp: fix "sizeof" syntax
+	problem (exposed on mingw)
+
 2008-06-06  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
 
 	* src/libYARP_OS/src/BottleImpl.cpp: temporary Bottle-specific
